<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Becotix</string>

    <!-- Activity Main -->
    <string name="activity_main_title">Registration</string>
    <string name="activity_main_first_name">First name</string>
    <string name="activity_main_last_name">Last name</string>
    <string name="activity_main_address_1">Address line 1</string>
    <string name="activity_main_address_2">Address line 2</string>
    <string name="activity_main_address_city">City</string>
    <string name="activity_main_address_region">Region</string>
    <string name="activity_main_address_postcode">Postcode</string>
    <string name="activity_main_email">Email</string>
    <string name="activity_main_password">Password</string>
    <string name="activity_main_password_confirmation">Password confirmation</string>
    <string name="activity_main_cc_number">Credit card number</string>
    <string name="activity_main_cc_name">Card holder name</string>
    <string name="activity_main_expiry">Expiry date</string>
    <string name="activity_main_csv">CSV number</string>
    <string name="activity_main_submit">Submit</string>
    <string name="activity_registration_error_message">Please complete all fields</string>

    <!-- Activity About -->
    <string name="activity_about_text_1">Welcome to Becontix instant travel</string>
    <string name="activity_about_text_2">Becontix is the easy way to travel and save.</string>
    <string name="activity_about_text_3">You will always be charged for the best value ticket on any one day.</string>
    <string name="activity_about_text_4">First you need to register, we will not charge you until after you have travelled.</string>
    <string name="activity_about_text_5">YOU NEED TO BE CONNECTED TO THE INTERNET FOR REGISTRATION</string>

    <!-- Activity Start Stop -->
    <string name="activity_start_stop_intro">This is your current stop</string>
    <string name="activity_start_stop_confirm_message">Do you want to start journey here?</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_end_stops">EndStopsActivity</string>
    <string name="title_activity_end_stop">EndStopActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Activity End Stop -->
    <string name="activity_end_stop_confirm_message">Do you want to end journey here?</string>
    <string name="title_activity_history">HistoryActivity</string>

</resources>
