<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/activity_main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/name"
        android:hint="@string/activity_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/email"
        android:singleLine="true" />
    <EditText
        android:id="@+id/email"
        android:hint="@string/activity_main_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/password"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password"
        android:hint="@string/activity_main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/password_confirmation"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password_confirmation"
        android:hint="@string/activity_main_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/address_1"
        android:singleLine="true" />
    <EditText
        android:id="@+id/address_1"
        android:hint="@string/activity_main_address_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/address_2"
        android:singleLine="true" />
    <EditText
        android:id="@+id/address_2"
        android:hint="@string/activity_main_address_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/city"
        android:singleLine="true" />
    <EditText
        android:id="@+id/city"
        android:hint="@string/activity_main_address_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/region"
        android:singleLine="true" />
    <EditText
        android:id="@+id/region"
        android:hint="@string/activity_main_address_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/postcode"
        android:singleLine="true" />
    <EditText
        android:id="@+id/postcode"
        android:hint="@string/activity_main_address_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/cc_number"
        android:singleLine="true" />
    <EditText
        android:id="@+id/cc_number"
        android:hint="@string/activity_main_password_cc_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    <Button
        android:id="@+id/submit"
        android:text="@string/activity_main_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
