<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/primary_light"
        android:orientation="vertical"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView android:text="Please enter your details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
        <EditText
            android:id="@+id/first_name"
            android:hint="@string/activity_main_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/email"
            android:singleLine="true" />
        <EditText
            android:id="@+id/last_name"
            android:hint="@string/activity_main_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/email"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView android:text="Account details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
        <EditText
            android:id="@+id/email"
            android:hint="@string/activity_main_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password"
            android:singleLine="true" />
        <EditText
            android:id="@+id/password"
            android:hint="@string/activity_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/password_confirmation"
            android:singleLine="true" />
        <EditText
            android:id="@+id/password_confirmation"
            android:hint="@string/activity_main_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/address_1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView android:text="Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
        <EditText
            android:id="@+id/address_1"
            android:hint="@string/activity_main_address_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/address_2"
            android:singleLine="true" />
        <EditText
            android:id="@+id/address_2"
            android:hint="@string/activity_main_address_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/city"
            android:singleLine="true" />
        <EditText
            android:id="@+id/city"
            android:hint="@string/activity_main_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/region"
            android:singleLine="true" />
        <EditText
            android:id="@+id/region"
            android:hint="@string/activity_main_address_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/postcode"
            android:singleLine="true" />
        <EditText
            android:id="@+id/postcode"
            android:hint="@string/activity_main_address_postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/cc_number"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView android:text="And your payment details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
        <EditText
            android:id="@+id/cc_number"
            android:hint="@string/activity_main_cc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
        <EditText
            android:id="@+id/cc_name"
            android:hint="@string/activity_main_cc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_expiry"
                android:inputType="date"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_csv"
                android:inputType="number"/>
            </LinearLayout>
        <Button
            android:background="@color/primary"
            android:textColor="@color/white"
            android:id="@+id/submit"
            android:text="@string/activity_main_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>