<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary_light"
    tools:context="co.becotix.becotix.AboutActivity">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_about_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_about_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_about_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_about_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_about_text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="New to Becotix?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
    <Button
        android:background="@color/primary"
        android:textColor="@color/white"
        android:id="@+id/register"
        android:text="REGISTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="Already have an account?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_extra_small"/>
    <Button
        android:background="@color/primary"
        android:textColor="@color/white"
        android:id="@+id/login"
        android:text="LOG IN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
